--- a/embedder/embedder.ipynb
+++ b/embedder/embedder.ipynb
@@ -10,7 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Working with 300 recipes\n",
+      "Working with 1000 recipes\n",
       "Preparing texts for embedding...\n",
       "\n",
       "Sample embedding text:\n",
@@ -19,30 +19,30 @@
       "Ingredients: 1 (3½–4-lb.) whole chicken, 2¾ tsp. kosher salt, divided, plus more, 2 small acorn squash (about 3 lb. total), 2 Tbsp. finely chopped sage, 1 Tbsp. finely chopped rosemary, 6 Tbsp. unsalted butter, melted, plus 3 Tbsp. room temperature, ¼ tsp. ground allspice, Pinch of crushed red pepper flakes, Freshly ground black pepper, ⅓ loaf good-quality sturdy white bread, torn into 1\" pieces (about 2½ cups), 2 medium apples (such...\n",
       "==================================================\n",
       "\n",
-      "Creating embeddings for 300 recipes...\n"
+      "Creating embeddings for 1000 recipes...\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Creating embeddings: 100%|██████████| 3/3 [00:08<00:00,  2.71s/it]"
+      "Creating embeddings: 100%|██████████| 10/10 [00:12<00:00,  1.21s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Successfully created embeddings for 300 recipes\n",
+      "Successfully created embeddings for 1000 recipes\n",
       "\n",
       "Saved files:\n",
       "- recipe_embeddings.pkl (full data with embeddings)\n",
       "- sample_recipes.json (sample recipes for inspection)\n",
       "\n",
       "Embedding stats:\n",
-      "- Total recipes processed: 300\n",
+      "- Total recipes processed: 1000\n",
       "- Embedding dimension: 1536\n",
-      "- Average text length: 465 characters\n"
+      "- Average text length: 449 characters\n"
      ]
     },
     {
@@ -71,8 +71,8 @@
     "# Load dataset\n",
     "df = pd.read_csv(\"../datasets/Food Ingredients and Recipe Dataset with Image Name Mapping.csv\")\n",
     "\n",
-    "# Take first 300 recipes for testing\n",
-    "sample_df = df.head(300).copy()\n",
+    "# Take first 1000 recipes for testing\n",
+    "sample_df = df.head(1000).copy()\n",
     "print(f\"Working with {len(sample_df)} recipes\")\n",
     "\n",
     "# Prepare texts for embedding\n",
@@ -182,25 +182,25 @@
       "============================================================\n",
       "Searching for: 'chicken with vegetables'\n",
       "\n",
-      "1. Golden Noodles With Chicken\n",
+      "1. Soy-Glazed Chicken with Broccoli\n",
+      "   Similarity: 0.512\n",
+      "   Ingredients: ['3 Tbsp. honey', '3 Tbsp. soy sauce or tamari', '3 Tbsp. unseasoned rice vinegar', '1 tsp. finely grated ginger (from one 2\" piece)', '1 Tbsp. vegetable oil', '4 skinless, boneless chicken thighs', '...\n",
+      "\n",
+      "2. Golden Noodles With Chicken\n",
       "   Similarity: 0.506\n",
       "   Ingredients: ['Extra-virgin olive oil', '4 shallots, thinly sliced into rings', '1/4 cup unbleached all-purpose flour', '2 tablespoons extra virgin olive oil', '2 bone-in, skin-on chicken breasts', 'Kosher salt an...\n",
       "\n",
-      "2. Tangy Vinegar Chicken With Barberries and Orange\n",
+      "3. Chicken Brodo with Spring Vegetables and Fried Bread\n",
+      "   Similarity: 0.499\n",
+      "   Ingredients: ['4 lb. raw chicken bones', '3 spring onions or 4 scallions, chopped', '4 garlic cloves, crushed', '3 oz. thinly sliced prosciutto, chopped', '3/4 cup dried porcini mushrooms, rinsed', '1/3 cup extra-...\n",
+      "\n",
+      "4. Tandoori Chicken and Vegetable Sheet-Pan Supper\n",
+      "   Similarity: 0.493\n",
+      "   Ingredients: ['5 tablespoons organic canola oil', '4 cloves garlic, minced', '2 tablespoons grated fresh ginger', '1 tablespoon chili powder', '1 tablespoon garam masala', '2 teaspoons ground cumin', '2 teaspoons ...\n",
+      "\n",
+      "5. Tangy Vinegar Chicken With Barberries and Orange\n",
       "   Similarity: 0.492\n",
-      "   Ingredients: ['3 lb. skin-on, bone-in chicken legs (thigh and drumstick) or a mix of thighs and drumsticks', 'Kosher salt', '2 Tbsp. vegetable or other neutral oil', '1 medium onion, finely chopped', '4 garlic clo...\n",
-      "\n",
-      "3. Chicken and Rice With Leeks and Salsa Verde\n",
-      "   Similarity: 0.490\n",
-      "   Ingredients: ['1½ lb. skinless, boneless chicken thighs (4–8 depending on size)', 'Kosher salt, freshly ground pepper', '3 Tbsp. unsalted butter, divided', '2 large or 3 medium leeks, white and pale green parts on...\n",
-      "\n",
-      "4. Spring Chicken Dinner Salad\n",
-      "   Similarity: 0.472\n",
-      "   Ingredients: ['2 large skinless, boneless chicken breasts (about 1¼ lb. total)', '3 Tbsp. Diamond Crystal or 3½ tsp. Morton kosher salt, plus more', '1 lemon, halved', '2 Tbsp. Dijon mustard', '6 Tbsp. extra-virgi...\n",
-      "\n",
-      "5. Chicken Pelau\n",
-      "   Similarity: 0.472\n",
-      "   Ingredients: ['1 cup dry or 1 (12-ounce) can pigeon peas, pinto beans, or black-eyed peas', '2 cups long-grain rice', '3 tablespoons canola oil', '3/4 cup sugar (white or brown)', '1 (3-pound) chicken, cut into 8 ...\n"
+      "   Ingredients: ['3 lb. skin-on, bone-in chicken legs (thigh and drumstick) or a mix of thighs and drumsticks', 'Kosher salt', '2 Tbsp. vegetable or other neutral oil', '1 medium onion, finely chopped', '4 garlic clo...\n"
      ]
     }
    ],
